# Pilipino-based-Phising-Detector

./: .env.example  .gitignore  README.md
app/: globals.css  page.tsx
backend/: .env.example  app.py  dataset.csv  ml_predictor.py  model.pkl  pyproject.toml  requirements.txt  train_model.py  vectorizer.pkl
backend/database/: __init__.py  mongo_client.py
backend/detectors/: __init__.py  message_detector.py  url_detector.py  voice_detector.py
backend/scratch/: verify_fixes.py
components/: message-scanner.tsx  risk-badge.tsx  scan-history.tsx  threat-list.tsx  url-scanner.tsx  voice-scanner.tsx
lib/: api-client.ts
