[project]
name = "phishing-detection"
version = "0.1.0"
description = "AI phishing detection system for Philippine scams"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pymongo==4.6.0",
    "python-dotenv==1.0.0",
    "nltk==3.8.1",
    "scikit-learn==1.3.2",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "pydub==0.25.1",
    "numpy==1.26.2",
    "speechrecognition>=3.15.1",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
